# learnopengl2

./: .gitignore  CMakeLists.txt  errutil.h  main.cpp  texture.h  util.h  vcpkg-configuration.json  vcpkg.json
common/: CMakeLists.txt  assimp_loader.cpp  assimp_loader.h  compat.h  cstring_view.h  errutils.h  glutils.h  handle.h  lights.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  primitives.cpp  primitives.h  raii.h  scope_guard.h  shader.cpp  shader.h  texture.cpp  texture.h  u8tils.h  utils.h
mesh_demo/: CMakeLists.txt  main.cpp
model_demo/: CMakeLists.txt  main.cpp
resources/models/master_sword__hylian_shield/: scene.gltf
resources/shaders/: shader.fs  shader.vs
simple_demo/: CMakeLists.txt  main.cpp
temp/: CMakeLists.txt  main.cpp
texture_demo/: CMakeLists.txt  main.cpp
texture_demo/resources/shaders/: shader.vs
texture_demo2/: CMakeLists.txt  main.cpp
texture_demo2/resources/shaders/: shader.fs  shader.vs
